--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"deploy:dev": "react-scripts build && aws s3 sync  ./build s3://dev.boostlabs/radian-avm/ --profile boost",
 		"deploy:staging": "react-scripts build && aws s3 sync  ./build s3://staging.boostlabs/radian-avm/ --profile boost"
 	},
+	"homepage": ".",
 	"eslintConfig": {
 		"extends": "react-app"
 	},
