--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
+		"server": "cd ./api && yarn start",
 		"build": "react-scripts build",
+		"build:pdf": "cd ./server && yarn start",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"deploy:dev": "react-scripts build && aws s3 sync  ./build s3://dev.boostlabs/radian-avm/ --profile boost",
-		"deploy:staging": "react-scripts build && aws s3 sync  ./build s3://staging.boostlabs/radian-avm/ --profile boost"
+		"deploy:dev:client": "react-scripts build && aws s3 sync  ./build s3://dev.boostlabs/radian-avm/ --profile boost",
+		"deploy:dev:server": "cd ./api && yarn deploy",
+		"deploy:dev": "yarn deploy:dev:client & yarn deploy:dev:server"
 	},
 	"homepage": ".",
 	"eslintConfig": {
