--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"eject": "react-scripts eject",
 		"deploy:client": "react-scripts build && aws s3 sync  ./build s3://dev.boostlabs/radian-avm/ --profile boost",
 		"deploy:server": "cd ./api && yarn deploy",
-		"deploy": "yarn deploy:dev:client & yarn deploy:dev:server"
+		"deploy": "yarn deploy:client & yarn deploy:server"
 	},
 	"homepage": ".",
 	"eslintConfig": {
