--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react-dom": "^16.9.0",
 		"moment": "^2.25.3",
 		"node-sass": "^4.14.0",
+		"numeral": "^2.0.6",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1",
@@ -44,6 +45,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/numeral": "^0.0.28",
 		"@types/react": "^16.9.34",
 		"@typescript-eslint/eslint-plugin": "^2.30.0",
 		"@typescript-eslint/parser": "^2.30.0",
