--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"@types/google-map-react": "^1.1.7",
 		"@types/jest": "^24.0.0",
 		"@types/node": "^12.0.0",
 		"@types/react-dom": "^16.9.0",
+		"google-map-react": "^1.1.7",
 		"moment": "^2.25.3",
 		"node-sass": "^4.14.0",
 		"numeral": "^2.0.6",
