--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"start:local": "REACT_APP_STAGE=local react-scripts start",
+		"start:single": "REACT_APP_STAGE=test react-scripts start",
+		"start:local": "REACT_APP_ENV=local react-scripts start",
 		"server": "cd ./api && yarn start",
 		"build": "react-scripts build",
 		"build:pdf": "cd ./server && yarn start",
