--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"start": "react-scripts start",
 		"start:single": "REACT_APP_STAGE=test react-scripts start",
 		"start:local": "REACT_APP_ENV=local react-scripts start",
+		"start:single:local": "REACT_APP_STAGE=test REACT_APP_ENV=local react-scripts start",
 		"server": "cd ./api && yarn start",
 		"build": "react-scripts build",
 		"build:pdf": "cd ./server && yarn start",
